--- a/less/variables.less
+++ b/less/variables.less
@@ -2,3 +2,7 @@
 @phone: ~"(max-width: 500px)";
 
 //fonts
+@import url('https://fonts.googleapis.com/css?family=Public+Sans&display=swap'); //public sans
+@publicFont: 'Public Sans', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap'); // lobster
+@lobsterFont: 'Lobster', cursive;
