--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -3,7 +3,7 @@
 
   .landing-container{
     .displayFlex(column, center, center);
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8)), url("/images/family-camping.jpg");
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/family-camping.jpg");
     background-size: cover;
     background-position: center 75%;
     background-repeat: no-repeat;
@@ -30,9 +30,10 @@
   
       .heading-btn{
         margin: 3vh 0;
+        margin-top: 7vh;
 
         a{
-          font-size: 2rem;
+          font-size: 2.5rem;
           font-family: @publicFont;
           padding: 0.5rem 2rem;
           border: 1px solid white;
