--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -1,6 +1,9 @@
 .landing-body{
   width: 100%;
 
+  
+//=======LANDING PAGE======
+
   .landing-container{
     .displayFlex(column, center, center);
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/family-camping.jpg");
@@ -17,7 +20,7 @@
         .displayFlex(column, center, flex-start);
 
         h1{
-          font-size: 8rem;
+          font-size: 10rem;
           color: white;
           font-family: @lobsterFont;
 
@@ -32,6 +35,10 @@
         margin: 3vh 0;
         margin-top: 7vh;
 
+        @media @phone{
+          margin-top: 15vh;
+        }
+
         a{
           font-size: 2.5rem;
           font-family: @publicFont;
@@ -43,6 +50,10 @@
           color: white;
           text-decoration: none;
 
+          @media @phone{
+            font-size: 3rem;
+          }
+
           &:hover{
             background: rgba(163, 76, 76, 0.25);
             transition: 1s;
@@ -51,6 +62,9 @@
       }//heading btn
     }//landing content
   }//landing container
+
+
+//=====ARROW DIVIDER=====
 
   .arrow-down{
     .displayFlex(row, center, center);
@@ -67,59 +81,4 @@
       }//img
     }//arrow container
   }//arrow down
-
-  .about-section{
-    width: 80%;
-    margin: 0 auto;
-
-    .cont-one{
-      .displayFlex(row, flex-start, center);
-      .border();
-      .img-cont{
-        .border();
-        width: 20%;
-      }
-      .about-text{
-        .border();
-        padding: 0 2%;
-        h2{
-          font-size: 2.5rem;
-          margin-bottom: 3vh;
-        }//h2
-
-        P{
-          font-size: 1.5rem;
-          line-height: 1.5;
-        }//p
-      }//about text
-    }//cont one
-
-    .cont-two{
-      .displayFlex(row-reverse, flex-start, center);
-      .border();
-      margin-top: 2vh;
-      .img-cont{
-        .border();
-        width: 20%;
-      }
-      .about-text{
-        .displayFlex(column, center, flex-end);
-        .border();
-        padding: 0 2%;
-        h2{
-          .border();
-          font-size: 2.5rem;
-          margin-bottom: 3vh;
-        }//h2
-        P{
-          .border();
-          font-size: 1.5rem;
-          line-height: 1.5;
-        }//p
-      }//about text
-    }//cont two
-
-
-
-  }//about section
 }//landing body
