--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,9 @@
 // Mobile at 500px
 @phone: ~"(max-width: 500px)";
 
+//tablet at 900px
+@tablet: ~"(max-width: 800px)";
+
 //fonts
 @import url('https://fonts.googleapis.com/css?family=Public+Sans&display=swap'); //public sans
 @publicFont: 'Public Sans', sans-serif;
