updated hero image to match design / updated login button to match color scheme / updated about us to be more visually appealing and added photo to the about us / updated the who we are section / responsive at desktop, tablet, and mobile

--- a/less/variables.less
+++ b/less/variables.less
@@ -6,6 +6,13 @@
 
 //fonts
 @import url('https://fonts.googleapis.com/css?family=Public+Sans&display=swap'); //public sans
+
 @publicFont: 'Public Sans', sans-serif;
+
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap'); // lobster
+
 @lobsterFont: 'Lobster', cursive;
+
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+@robotFont: 'Roboto', sans-serif;
