--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,13 @@
   font-display: swap;
   src: local('Lobster Regular'), local('Lobster-Regular'), url(https://fonts.gstatic.com/s/lobster/v22/neILzCirqoswsqX9zoKmNg.ttf) format('truetype');
 }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -148,6 +155,7 @@ table {
 }
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 * {
   box-sizing: border-box;
@@ -161,7 +169,7 @@ html {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/family-camping.jpg");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/rv-on-lake.png");
   background-size: cover;
   background-position: center 75%;
   background-repeat: no-repeat;
@@ -172,7 +180,6 @@ html {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  width: 75%;
 }
 .landing-body .landing-container .landing-content .heading {
   display: flex;
@@ -183,15 +190,24 @@ html {
 .landing-body .landing-container .landing-content .heading h1 {
   font-size: 10rem;
   color: white;
-  font-family: 'Lobster', cursive;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
 }
 .landing-body .landing-container .landing-content .heading h1 img {
-  border: 1px solid gray;
   width: 30%;
 }
 .landing-body .landing-container .landing-content .heading-btn {
   margin: 3vh 0;
   margin-top: 7vh;
+  text-align: center;
+  width: 90%;
+  background: #DF7325;
+  padding: 0.5rem 2rem;
+  border-radius: 5px;
+}
+.landing-body .landing-container .landing-content .heading-btn:hover {
+  background: #c56520;
+  transition: 1s;
 }
 @media (max-width: 500px) {
   .landing-body .landing-container .landing-content .heading-btn {
@@ -201,10 +217,7 @@ html {
 .landing-body .landing-container .landing-content .heading-btn a {
   font-size: 2.5rem;
   font-family: 'Public Sans', sans-serif;
-  padding: 0.5rem 2rem;
-  border: 1px solid white;
-  border-radius: 5px;
-  background: rgba(165, 42, 42, 0.25);
+  width: 100%;
   transition: 1s;
   color: white;
   text-decoration: none;
@@ -213,10 +226,6 @@ html {
   .landing-body .landing-container .landing-content .heading-btn a {
     font-size: 3rem;
   }
-}
-.landing-body .landing-container .landing-content .heading-btn a:hover {
-  background: rgba(163, 76, 76, 0.25);
-  transition: 1s;
 }
 .landing-body .arrow-down {
   display: flex;
@@ -233,183 +242,300 @@ html {
   transition: 1s;
   transform: scale3d(1.1, 1.1, 1.1);
 }
-.about-section {
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 2vh;
+.bg-one {
+  position: absolute;
+  background: rgba(114, 95, 89, 0.85);
+  border-radius: 5px;
+  height: 50vh;
+  left: 1rem;
+  right: 1rem;
+  z-index: -10;
+}
+.bg-two {
+  position: absolute;
+  background: rgba(62, 51, 47, 0.75);
+  border-radius: 5px;
+  top: 20rem;
+  left: 10rem;
+  width: 50%;
+  height: 70vh;
+  z-index: -9;
+}
+.bg-three {
+  position: absolute;
+  background: rgba(170, 127, 63, 0.65);
+  border-radius: 5px;
+  top: 40rem;
+  right: 5rem;
+  width: 50%;
+  height: 65vh;
+  z-index: -8;
 }
 @media (max-width: 500px) {
-  .about-section {
+  .bg-three {
+    right: 1vw;
+    height: 55vh;
+  }
+}
+.bg-four {
+  position: absolute;
+  background: rgba(146, 109, 53, 0.4);
+  border-radius: 5px;
+  top: 70rem;
+  left: 5rem;
+  width: 48%;
+  height: 50vh;
+  z-index: -8;
+}
+@media (max-width: 500px) {
+  .bg-four {
+    top: 42rem;
+    left: 1vw;
+  }
+}
+.about-us {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 90%;
+  border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .about-us {
+    width: 100%;
+  }
+}
+.about-us .about-container {
+  width: 70%;
+  padding: 5% 10% 10% 10%;
+}
+@media (max-width: 800px) {
+  .about-us .about-container {
     width: 90%;
   }
 }
-.about-section .about-title {
-  text-align: right;
-}
 @media (max-width: 500px) {
-  .about-section .about-title {
-    text-align: center;
+  .about-us .about-container {
+    width: 100%;
   }
 }
-.about-section .about-title h2 {
-  padding: 2vh 2%;
-  font-size: 4rem;
+.about-us .about-container .about-title {
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 2vh;
+  margin-right: 1vw;
 }
 @media (max-width: 500px) {
-  .about-section .about-title h2 {
+  .about-us .about-container .about-title {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.about-us .about-container .about-title h2 {
+  font-family: 'Public Sans', sans-serif;
+  font-size: 6rem;
+  font-weight: 700;
+  color: white;
+}
+@media (max-width: 500px) {
+  .about-us .about-container .about-title h2 {
     font-size: 5rem;
   }
 }
-.about-section .about-article-cont {
-  margin-top: 0vh;
+.about-us .about-container .text-img-cont {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2% 5%;
+  background: white;
+  border-radius: 10px;
 }
-.about-section .about-article-cont .about-text {
-  width: 70%;
-  padding: 0 5%;
+.about-us .about-container .text-img-cont .about-text {
+  text-align: right;
 }
-@media (max-width: 500px) {
-  .about-section .about-article-cont .about-text {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    margin-top: 3vh;
-  }
-}
-.about-section hr {
-  margin: 4vh auto;
-  background: black;
-  border: none;
-  height: 1px;
-  width: 90%;
-}
-.about-section h2 {
-  font-size: 2.5rem;
-  margin-bottom: 1.5vh;
-  font-family: 'Public Sans', sans-serif;
-  font-weight: 700;
-}
-@media (max-width: 500px) {
-  .about-section h2 {
-    font-size: 3rem;
-  }
-}
-.about-section h3 {
+.about-us .about-container .text-img-cont p {
   font-size: 2rem;
+  line-height: 1.75;
   font-family: 'Public Sans', sans-serif;
-  margin-bottom: 1.5rem;
-}
-.about-section P {
-  font-size: 2rem;
-  font-family: 'Public Sans', sans-serif;
-  line-height: 1.5;
-}
-@media (max-width: 500px) {
-  .about-section P {
-    font-size: 2rem;
-  }
 }
 @media (max-width: 800px) {
-  .about-section P {
+  .about-us .about-container .text-img-cont p {
     font-size: 1.75rem;
   }
 }
-.about-section .img-cont {
-  width: 30%;
-}
-@media (max-width: 800px) {
-  .about-section .img-cont {
-    width: 75%;
+@media (max-width: 500px) {
+  .about-us .about-container .text-img-cont p {
+    font-size: 1.6rem;
   }
 }
+.about-us .about-container .text-img-cont p .bold {
+  font-weight: 600;
+}
+.about-us .about-container .text-img-cont p .underline {
+  text-decoration: underline;
+}
+.about-us .about-container .text-img-cont .rv-img-cont {
+  margin-top: 2vh;
+}
+.about-us .about-container .text-img-cont .rv-img-cont img {
+  width: 100%;
+  border-radius: 5px;
+}
+.line-break {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 5vh 0;
+}
+.line-break hr {
+  width: 90%;
+  height: 1px;
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+}
+.who-we-are {
+  width: 80%;
+  margin: 0 auto;
+}
 @media (max-width: 500px) {
-  .about-section .img-cont {
+  .who-we-are {
     width: 90%;
   }
 }
-.about-section .cont-one {
+@media (max-width: 500px) {
+  .who-we-are .who-container article {
+    margin-top: 5vh;
+  }
+}
+.who-we-are .who-container article .bio-cont {
   display: flex;
   flex-flow: row;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  margin-top: 2vh;
 }
-@media (max-width: 500px) {
-  .about-section .cont-one {
+@media (max-width: 800px) {
+  .who-we-are .who-container article .bio-cont {
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 5vh;
+  }
+}
+@media (max-width: 500px) {
+  .who-we-are .who-container article .bio-cont {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
     align-items: center;
   }
 }
-.about-section .cont-two {
+.who-we-are .who-container article .bio-cont .img-cont {
+  width: 40%;
+}
+@media (max-width: 800px) {
+  .who-we-are .who-container article .bio-cont .img-cont {
+    width: 60%;
+  }
+}
+@media (max-width: 500px) {
+  .who-we-are .who-container article .bio-cont .img-cont {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .who-we-are .who-container article .bio-cont .img-cont img {
+    border-radius: 5px;
+  }
+}
+.who-we-are .who-container article .bio-cont .bio-text {
+  width: 40%;
+}
+@media (max-width: 800px) {
+  .who-we-are .who-container article .bio-cont .bio-text {
+    width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .who-we-are .who-container article .bio-cont .bio-text {
+    width: 100%;
+  }
+}
+.who-we-are .who-container article .bio-cont .bio-text h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3.5rem;
+  font-weight: 600;
+  margin-bottom: 0.5vh;
+}
+@media (max-width: 800px) {
+  .who-we-are .who-container article .bio-cont .bio-text h2 {
+    margin-top: 2vh;
+  }
+}
+@media (max-width: 500px) {
+  .who-we-are .who-container article .bio-cont .bio-text h2 {
+    margin-top: 1vh;
+  }
+}
+.who-we-are .who-container article .bio-cont .bio-text h3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.5rem;
+  margin-bottom: 2vh;
+  margin-left: 0.5vw;
+}
+.who-we-are .who-container article .bio-cont .bio-text p {
+  font-family: 'Public Sans', sans-serif;
+  font-size: 2rem;
+  line-height: 1.5;
+}
+@media (max-width: 800px) {
+  .who-we-are .who-container article .bio-cont .bio-text p {
+    font-size: 1.9rem;
+  }
+}
+@media (max-width: 500px) {
+  .who-we-are .who-container article .bio-cont .bio-text p {
+    font-size: 1.8rem;
+  }
+}
+.who-we-are .who-container article .bio-two-cont,
+.who-we-are .who-container article .bio-four-cont,
+.who-we-are .who-container article .bio-six-cont {
   display: flex;
   flex-flow: row-reverse;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
 }
-@media (max-width: 500px) {
-  .about-section .cont-two {
+@media (max-width: 800px) {
+  .who-we-are .who-container article .bio-two-cont,
+  .who-we-are .who-container article .bio-four-cont,
+  .who-we-are .who-container article .bio-six-cont {
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
   }
 }
-.about-section .cont-three {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-start;
-  align-items: center;
-}
 @media (max-width: 500px) {
-  .about-section .cont-three {
+  .who-we-are .who-container article .bio-two-cont,
+  .who-we-are .who-container article .bio-four-cont,
+  .who-we-are .who-container article .bio-six-cont {
     display: flex;
     flex-flow: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.about-section .cont-four {
-  display: flex;
-  flex-flow: row-reverse;
-  justify-content: flex-start;
-  align-items: center;
-}
-@media (max-width: 500px) {
-  .about-section .cont-four {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.about-section .cont-five {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-@media (max-width: 500px) {
-  .about-section .cont-five {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.about-section .cont-six {
-  display: flex;
-  flex-flow: row-reverse;
-  justify-content: flex-start;
-  align-items: center;
-}
-@media (max-width: 500px) {
-  .about-section .cont-six {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
   }
 }
