--- a/less/about.less
+++ b/less/about.less
@@ -1,160 +1,141 @@
-//======ABOUT SECTION==========
-.about-section{
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 2vh;
+.bg-one{
+  position: absolute;
+  background: rgba(114, 95, 89, 0.85);
+  border-radius: 5px;
+  
+  height: 50vh;
+  left: 1rem;
+  right: 1rem;
+  z-index: -10;
+}
+
+.bg-two{
+  position: absolute;
+  background: rgba(62, 51, 47, 0.75);
+  border-radius: 5px;
+  top: 20rem;
+  left: 10rem;
+  width: 50%;
+  height: 70vh;
+  z-index: -9;
+}
+
+.bg-three{
+  position: absolute;
+  background: rgba(170, 127, 63, 0.65);
+  border-radius: 5px;
+  top: 40rem;
+  right: 5rem;
+  width: 50%;
+  height: 65vh;
+  z-index: -8;
 
   @media @phone{
-    width: 90%;
+    right: 1vw;
+    height: 55vh;
   }
+}
 
-  .about-title{
-    text-align: right;
-    @media @phone{
-      text-align: center;
-    }//media
-    h2{
-      padding: 2vh 2%;
-      font-size: 4rem;
-      @media @phone{
-        font-size: 5rem;
-      }//media
-    }//h2
-  }//about title
+.bg-four{
+  position: absolute;
+  background: rgba(146, 109, 53, 0.4);
+  border-radius: 5px;
+  top: 70rem;
+  left: 5rem;
+  width: 48%;
+  height: 50vh;
+  z-index: -8;
 
-  .about-article-cont{
-    margin-top: 0vh;
-    .about-text{
-      width: 70%;
-      padding: 0 5%;
-
-      @media @phone{
-        .displayFlex(column, center, center);
-        width: 100%;
-        padding: 0;
-        margin-top: 3vh;
-      }
-    }//about text
-  }//about article cont
-
-
-
-
-//=====LINE BREAK=====
-  hr{
-    margin: 4vh auto;
-    background: black;
-    border: none;
-    height: 1px;
-    width: 90%;
+  @media @phone{
+    top: 42rem;
+    left: 1vw;
   }
+}
 
 
-
-
-  //=====h2 / h3 / p=====
-  h2{
-    font-size: 2.5rem;
-    margin-bottom: 1.5vh;
-    font-family: @publicFont;
-    font-weight: 700;
-
-    @media @phone{
-      font-size: 3rem;
-    }
-  }//h2
-
-  h3{
-    font-size: 2rem;
-    font-family: @publicFont;
-    margin-bottom: 1.5rem;
+.about-us{
+  .displayFlex(column, center, center);
+  margin: 0 auto;
+  width: 90%;
+  border-radius: 10px;
+  @media @phone{
+    width: 100%;
   }
-
-  P{
-    font-size: 2rem;
-    font-family: @publicFont;
-    line-height: 1.5;
-    @media @phone{
-      font-size: 2rem;
-    }
-    @media @tablet{
-      font-size: 1.75rem;
-    }
-  }//p
-
-
-
-
-  //=====IMG and IMG container=====
-  .img-cont{
-    width: 30%;
+  
+  .about-container{
+    width: 70%;
+    padding: 5% 10% 10% 10%;
 
     @media @tablet{
-      width: 75%
-    }
-    @media @phone{
       width: 90%;
     }
-  }
-
-  
-
-
-//=====BIO ONE=====
-  .cont-one{
-    .displayFlex(row, flex-start, center);
 
     @media @phone{
-      .displayFlex(column, center, center);
+      width: 100%;
     }
-  }//cont one
 
-//=====BIO TWO=====
-  .cont-two{
-    .displayFlex(row-reverse, flex-start, center);
+    .about-title{
+      .displayFlex(row, flex-end, center);
+      margin-bottom: 2vh;
+      margin-right: 1vw;
 
-    @media @phone{
+      @media @phone{
+        .displayFlex(row, center, center);
+      }
+
+      h2{
+        font-family: @publicFont;
+        font-size: 6rem;
+        font-weight: 700;
+        color: white;
+
+        @media @phone{
+          font-size: 5rem;
+        }
+      }//h2
+    }//about title
+
+    .text-img-cont{
       .displayFlex(column, center, center);
-    }
-  }//cont two
+      text-align: center;
+      padding: 2% 5%;
+      background: white;
+      border-radius: 10px;
 
-//=====BIO THREE=====    
-  .cont-three{
-    .displayFlex(row, flex-start, center);
+      .about-text{
+        text-align: right;
+      }
 
-    @media @phone{
-      .displayFlex(column, center, center);
-    }
-    
-  }//cont three
+      p{
 
-//=====BIO FOUR=====    
-  .cont-four{
-    .displayFlex(row-reverse, flex-start, center);
+        font-size: 2rem;
+        line-height: 1.75;
+        font-family: @publicFont;
 
-    @media @phone{
-      .displayFlex(column, center, center);
-    }
-    
-  }//cont four
+        @media @tablet{
+          font-size: 1.75rem;
+        }
+        @media @phone{
+          font-size: 1.6rem;
+        }
 
-//=====BIO FIVE=====    
-  .cont-five{
-    .displayFlex(row, flex-start, center);
+        .bold{
+          font-weight: 600;
+        }
 
-    @media @phone{
-      .displayFlex(column, center, center);
-    }
-  }//cont five
+        .underline{
+          text-decoration: underline;
+        }
+      }//p
 
-//=====BIO SIX=====    
-  .cont-six{
-    .displayFlex(row-reverse, flex-start, center);
-
-    @media @phone{
-      .displayFlex(column, center, center);
-    }
-  }//cont four
-
-
-}//about section
+      .rv-img-cont{
+        margin-top: 2vh;
+        
+        img{
+          width: 100%;
+          border-radius: 5px;
+        }
+      }
+    }//about text
+  }//about container
+}//about us
