--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -6,7 +6,7 @@
 
   .landing-container{
     .displayFlex(column, center, center);
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/family-camping.jpg");
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/rv-on-lake.png");
     background-size: cover;
     background-position: center 75%;
     background-repeat: no-repeat;
@@ -14,7 +14,6 @@
 
     .landing-content{
       .displayFlex(column, center, center);
-      width: 75%;
 
       .heading{
         .displayFlex(column, center, flex-start);
@@ -22,10 +21,10 @@
         h1{
           font-size: 10rem;
           color: white;
-          font-family: @lobsterFont;
+          font-family: @robotFont;
+          font-weight: 700;
 
           img{
-            .border();
             width: 30%;
           }
         }//h1
@@ -34,6 +33,17 @@
       .heading-btn{
         margin: 3vh 0;
         margin-top: 7vh;
+        text-align: center;
+
+        width: 90%;
+        background: #DF7325;
+        padding: 0.5rem 2rem;
+        border-radius: 5px;
+
+        &:hover{
+          background: rgb(197, 101, 32);
+          transition: 1s;
+        }
 
         @media @phone{
           margin-top: 15vh;
@@ -41,22 +51,15 @@
 
         a{
           font-size: 2.5rem;
-          font-family: @publicFont;
-          padding: 0.5rem 2rem;
-          border: 1px solid white;
-          border-radius: 5px;
-          background: rgba(165, 42, 42, 0.25);
+          font-family: @publicFont;   
+          width: 100%;       
+          
           transition: 1s;
           color: white;
           text-decoration: none;
 
           @media @phone{
             font-size: 3rem;
-          }
-
-          &:hover{
-            background: rgba(163, 76, 76, 0.25);
-            transition: 1s;
           }
         }//a
       }//heading btn
