--- a/less/who-we-are.less
+++ b/less/who-we-are.less
@@ -11,6 +11,27 @@
   }
 }
 
+.meet-the-team{
+  text-align: right;
+  margin-right: 10rem;
+
+  @media @tablet{
+    text-align: center;
+    margin: 0;
+  }
+
+  h2{
+    font-family: @publicFont;
+    font-size: 5rem;
+    font-weight: 700;
+    color: black;
+
+    @media @tablet{
+      font-size: 4rem;
+    }
+  }
+}
+
 .who-we-are{
   width: 80%;
   margin: 0 auto;
