--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ html {
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("images/rv-on-lake.png");
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("./images/rv-on-lake.png");
   background-size: cover;
   background-position: center 75%;
   background-repeat: no-repeat;
