--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -6,7 +6,7 @@
 
   .landing-container{
     .displayFlex(column, center, center);
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("/images/rv-on-lake.png");
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("../images/rv-on-lake.png");
     background-size: cover;
     background-position: center 75%;
     background-repeat: no-repeat;
