--- a/less/who-we-are.less
+++ b/less/who-we-are.less
@@ -25,6 +25,7 @@
     font-size: 5rem;
     font-weight: 700;
     color: black;
+    margin-bottom: 5vh;
 
     @media @tablet{
       font-size: 4rem;
