--- a/less/about.less
+++ b/less/about.less
@@ -32,7 +32,7 @@
 
   @media @phone{
     right: 1vw;
-    height: 55vh;
+    height: 57vh;
   }
 }
 
@@ -63,7 +63,7 @@
   }
   
   .about-container{
-    width: 70%;
+    width: 90%;
     padding: 5% 10% 10% 10%;
 
     @media @tablet{
@@ -72,6 +72,7 @@
 
     @media @phone{
       width: 100%;
+      padding: 2.5% 5% 5% 5%;
     }
 
     .about-title{
